[tool.poetry]
name = "prfr"
version = "0.2.4"
description = "Probabilitic random forest regression algorithm"
license = "MIT"
authors = ["Jeff Shen <shenjeff@princeton.edu>"]
readme = "README.md"
repository = "https://github.com/al-jshen/prfr"
keywords = ["machine learning", "random forest", "regression", "probabilistic", "modeling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8,<4.0"
joblib = "^1.1.0"
numpy = "^1.21"
scipy = "^1.8.0"
scikit-learn = "^1.1"
tqdm = "^4.64.0"
noisyopt = "^0.2.2"
jax = {version = "^0.3.24", optional = true}
jaxopt = {version = "^0.5.5", optional = true}
optax = {version = "^0.1.3", optional = true}

[tool.poetry.extras]
jax = ["jax", "jaxopt", "optax"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
